@@ -1,6 +1,6 @@
 # 2DGameEngine
 
-A 2D game engine with ECS architecture made using SDL, GLM, Dear ImGui, Sol, Lua and the C++ programming language by following the course [C++ Game Engine Programming](https://pikuma.com/courses/cpp-2d-game-engine-development) by Gustavo Pezzi at [pikuma.com](https://pikuma.com).
+A 2D game engine with Entity-Component-System (ECS) architecture made using SDL, GLM, Dear ImGui, Sol, Lua and the C++ programming language by following the course [C++ Game Engine Programming](https://pikuma.com/courses/cpp-2d-game-engine-development) by Gustavo Pezzi at [pikuma.com](https://pikuma.com).
 
 > [!TIP]
 > See [NOTES.txt](NOTES.txt) for more info.
