@@ -1,5 +1,8 @@
 #include "ECS.h"
+#include "../Logger/Logger.h"
 #include <algorithm>
+
+int IComponent::nextId = 0;
 
 int Entity::GetId() const {
     return id;
@@ -21,4 +24,36 @@ std::vector<Entity> System::GetSystemEntities() const {
 
 const Signature& System::GetComponentSignature() const {
     return componentSignature;
+}
+
+Entity Registry::CreateEntity() {
+    int entityId = numEntities++;
+
+    Entity entity(entityId);
+    entitiesToBeAdded.insert(entity);
+
+    Logger::Log("Entity created with id = " + std::to_string(entityId));
+
+    return entity;
+}
+
+void Registry::AddEntityToSystems(Entity entity) {
+    const auto entityId = entity.GetId();
+
+    const auto& entityComponentSignature = entityComponentSignatures[entityId];
+    
+    for (auto& system: systems) {
+        const auto& systemComponentSignature = system.second->GetComponentSignature();
+
+        bool isInterested = (entityComponentSignature & systemComponentSignature) == systemComponentSignature;
+
+        if (isInterested) {
+            system.second->AddEntityToSystem(entity);
+        }
+    }
+}
+
+void Registry::Update() {
+    // TODO: Add the entities that are waiting to be created to the active systems
+    // TODO: Remove the entities that are waiting to be killed from the active systems
 }
